codegen/tests/ui/typed-uris-bad-params.stderr
error: `simple` route uri expects 1 parameter but 0 were supplied
  --> $DIR/typed-uris-bad-params.rs:18:10
   |
18 |     uri!(simple);
   |          ^^^^^^
   |
   = note: expected parameter: id: i32

error: `simple` route uri expects 1 parameter but 2 were supplied
  --> $DIR/typed-uris-bad-params.rs:19:18
   |
19 |     uri!(simple: 1, 23);
   |                  ^^^^^
   |
   = note: expected parameter: id: i32

error: `simple` route uri expects 1 parameter but 2 were supplied
  --> $DIR/typed-uris-bad-params.rs:20:18
   |
20 |     uri!(simple: "Hello", 23, );
   |                  ^^^^^^^^^^^^
   |
   = note: expected parameter: id: i32

error: `guard_1` route uri expects 1 parameter but 2 were supplied
  --> $DIR/typed-uris-bad-params.rs:21:19
   |
21 |     uri!(guard_1: "hi", 100);
   |                   ^^^^^^^^^
   |
   = note: expected parameter: id: i32

error: invalid parameters for `simple` route uri
  --> $DIR/typed-uris-bad-params.rs:23:18
   |
23 |     uri!(simple: id = 100, name = "hi");
   |                  ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: uri parameters are: id: i32
help: unknown parameter: `name`
  --> $DIR/typed-uris-bad-params.rs:23:28
   |
23 |     uri!(simple: id = 100, name = "hi");
   |                            ^^^^

error: invalid parameters for `simple` route uri
  --> $DIR/typed-uris-bad-params.rs:24:18
   |
24 |     uri!(simple: id = 100, id = 100);
   |                  ^^^^^^^^^^^^^^^^^^
   |
   = note: uri parameters are: id: i32
help: duplicate parameter: `id`
  --> $DIR/typed-uris-bad-params.rs:24:28
   |
24 |     uri!(simple: id = 100, id = 100);
   |                            ^^

error: invalid parameters for `simple` route uri
  --> $DIR/typed-uris-bad-params.rs:25:18
   |
25 |     uri!(simple: name = 100, id = 100);
   |                  ^^^^^^^^^^^^^^^^^^^^
   |
   = note: uri parameters are: id: i32
help: unknown parameter: `name`
  --> $DIR/typed-uris-bad-params.rs:25:18
   |
25 |     uri!(simple: name = 100, id = 100);
   |                  ^^^^

error: invalid parameters for `simple` route uri
  --> $DIR/typed-uris-bad-params.rs:26:18
   |
26 |     uri!(simple: id = 100, id = 100, );
   |                  ^^^^^^^^^^^^^^^^^^^
   |
   = note: uri parameters are: id: i32
help: duplicate parameter: `id`
  --> $DIR/typed-uris-bad-params.rs:26:28
   |
26 |     uri!(simple: id = 100, id = 100, );
   |                            ^^

error: invalid parameters for `simple` route uri
  --> $DIR/typed-uris-bad-params.rs:27:18
   |
27 |     uri!(simple: name = "hi");
   |                  ^^^^^^^^^^^
   |
   = note: uri parameters are: id: i32
help: unknown parameter: `name`
  --> $DIR/typed-uris-bad-params.rs:27:18
   |
27 |     uri!(simple: name = "hi");
   |                  ^^^^
   = help: missing parameter: `id`

error: invalid parameters for `guard_1` route uri
  --> $DIR/typed-uris-bad-params.rs:28:19
   |
28 |     uri!(guard_1: cookies = "hi", id = 100);
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: uri parameters are: id: i32
help: unknown parameter: `cookies`
  --> $DIR/typed-uris-bad-params.rs:28:19
   |
28 |     uri!(guard_1: cookies = "hi", id = 100);
   |                   ^^^^^^^

error: invalid parameters for `guard_1` route uri
  --> $DIR/typed-uris-bad-params.rs:29:19
   |
29 |     uri!(guard_1: id = 100, cookies = "hi");
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: uri parameters are: id: i32
help: unknown parameter: `cookies`
  --> $DIR/typed-uris-bad-params.rs:29:29
   |
29 |     uri!(guard_1: id = 100, cookies = "hi");
   |                             ^^^^^^^

error: aborting due to 11 previous errors

